# polymarket-backtest

./: .gitignore  Cargo.toml  README.md
configs/: bonereaper_v2_base062901.toml  bonereaper_v2_convex_reversal.toml  bonereaper_v2_convex_scaled.toml  bonereaper_v2_fast_research.toml  bonereaper_v2_favourite_062901.command.txt  bonereaper_v2_hedged_first.toml  bonereaper_v2_leader.toml  bonereaper_v2_smoke.toml  reversal_score_coeffs.json
crates/pm-app/: Cargo.toml
crates/pm-app/examples/: nautilus_bonereaper_adapter.rs  nautilus_smoke.rs
crates/pm-app/src/: discovery.rs  main.rs  prep_cache.rs  result_summary.rs  runner.rs  walkforward.rs
crates/pm-model/: Cargo.toml
crates/pm-model/src/: lib.rs
crates/pm-risk/: Cargo.toml
crates/pm-risk/src/: lib.rs
crates/pm-strategy/: Cargo.toml
crates/pm-strategy/src/: bonereaper.rs  bonereaper_v2.rs  delta_neutral_mm.rs  late_big_bet.rs  late_confirmation.rs  late_convex_tail.rs  lib.rs  paired_mm.rs  reactive.rs  regime.rs  signals.rs  spot_follower.rs  spot_momentum.rs  trivial.rs  unlawful_recycler.rs
crates/pm-telonex-loader/: Cargo.toml
crates/pm-telonex-loader/src/: binance_trades.rs  book_snapshot.rs  lib.rs  nautilus_conv.rs  polymarket_onchain.rs  polymarket_trades.rs  s3.rs  schema.rs
crates/pm-types/: Cargo.toml
crates/pm-types/src/: config.rs  lib.rs  market.rs  spot.rs  tape.rs  trade.rs
docs/: .ladder_clip10.err  active_btc5m_experiments.md  autoresearch-ml-loop.md  aws-backtest-runbook.md  binance_flow_discovery_062901_30d.md  btc5m_br2_live_port_plan.md  btc5m_daily_pnl_attribution.csv  btc5m_daily_pnl_attribution.md  btc5m_engine_handover.md  btc5m_flow_conditional_convex.md  btc5m_late_regime_action_report.md  btc5m_late_regime_readout.md  btc5m_loss_limiting_hedge_first_design.md  btc5m_maker_overlay_build_plan.md  btc5m_midwide_membership_model.md  btc5m_midwide_regime_model.md  btc5m_postfill_checkpoint_10500_crossed_mid_after_fill_model.md  btc5m_postfill_checkpoint_10500_gate_sim.md  btc5m_postfill_checkpoint_10500_late_break_feature_contrast.md  btc5m_postfill_checkpoint_10500_late_break_gate_portfolio_sim.md  btc5m_postfill_checkpoint_10500_late_break_gate_search.md  btc5m_postfill_checkpoint_10500_regime_evolution.md  btc5m_postfill_checkpoint_10500_reversal_tail.md  btc5m_postfill_checkpoint_10500_toxic_reversal_path_model.md  btc5m_postfill_checkpoint_2000_regime_evolution.md  btc5m_postfill_checkpoint_2000_toxic_reversal_model.md  btc5m_postfill_checkpoint_3250_gate_sim.md  btc5m_postfill_checkpoint_4250_crossed_mid_after_fill_model.md  btc5m_postfill_checkpoint_4250_gate_sim.md  btc5m_postfill_checkpoint_4250_regime_evolution.md  btc5m_postfill_checkpoint_4250_reversal_tail.md  btc5m_postfill_checkpoint_4250_toxic_reversal_path_model.md  btc5m_postfill_checkpoint_4500_crossed_mid_after_fill_model.md  btc5m_postfill_checkpoint_4500_gate_sim.md  btc5m_postfill_checkpoint_4500_regime_evolution.md  btc5m_postfill_checkpoint_4500_reversal_tail.md  btc5m_postfill_checkpoint_4500_toxic_reversal_path_model.md  btc5m_postfill_checkpoint_5750_crossed_mid_after_fill_model.md  btc5m_postfill_checkpoint_5750_gate_sim.md  btc5m_postfill_checkpoint_5750_late_break_feature_contrast.md  (+51 more)
scripts/: audit_history.py  autoresearch_ml_loop.sh  binance_flow_reversal_discovery.py  compare_results.py  compare_run_configs.py  daily_pnl.py  daily_pnl_attribution.py  fill_attribution.py  late_break_feature_contrast.py  late_break_gate_portfolio_sim.py  late_break_gate_search.py  late_regime_action_report.py  launch_ec2.sh  launch_ec2_convex_validation.sh  launch_ec2_fullhist_configB.sh  launch_ec2_portfolio_grid.sh  midwide_regime_model.py  mm_calm_opportunity.py  mm_paired_ladder_sim.py  mm_paired_sim.py  postfill_gate_sim.py  postfill_regime_evolution.py  postfill_reversal_model.py  prep_cache.sh  prepare_asset_markets.py  recency_regime_report.py  recent_regime_model.py  regime_evolution_report.py  reversal_tail_diagnostics.py  run_postfill_diagnostics.py  watch_postfill_diagnostics.py
