[package]
name = "pm-strategy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
pm-types  = { workspace = true }
pm-risk   = { workspace = true }
pm-model  = { workspace = true }
serde     = { workspace = true }
chrono    = { workspace = true }
tracing   = { workspace = true }
thiserror = { workspace = true }
