[package]
name = "pm-telonex-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
pm-types       = { workspace = true }

nautilus-core   = { workspace = true }
nautilus-model  = { workspace = true }

arrow          = { workspace = true }
parquet        = { workspace = true }
object_store   = { workspace = true }
bytes          = { workspace = true }
futures        = { workspace = true }
tokio          = { workspace = true }

serde          = { workspace = true }
serde_json     = { workspace = true }
chrono         = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
