[package]
name = "pm-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
thiserror   = { workspace = true }
rust_decimal = { workspace = true }
bitflags    = { version = "2", features = ["serde"] }
